# DIS_EX4

./: README.md  compose.yaml  import-data.sh  init_db_mongo.js  init_postgres.sql  pyproject.toml  wine_catogories.md
src/: app.py  config.py  database.py  menu_ui.py  mongo_functions.py  postgres_functions.py
src/operations/: __init__.py  add.py  delete.py  update.py  views.py
